--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
   "dependencies": {
     "@types/config": "^3.3.2",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20.6.1",
     "config": "^3.3.9",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
