--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/config": "^3.3.2",
     "@types/express": "^4.17.17",
+    "@types/express-flash": "0.0.5",
     "@types/ioredis": "^5.0.0",
     "@types/node": "^20.6.1",
     "config": "^3.3.9",
@@ -29,6 +30,7 @@
     "core-js": "^3.26.1",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
+    "echarts": "^5.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -38,6 +40,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
+  
   "devDependencies": {
     "@types/debug": "^4.1.10",
     "@types/express-session": "^1.17.10",
